--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">NutriPocket</string>
+    <string name="nameFirst">First Name</string>
+    <string name="nameLast">Last Name</string>
+    <string name="age">Age</string>
+    <string name="genderPrompt">Gender</string>
+    <string name="height">Height (cm)</string>
+    <string name="weight">Weight (kg)</string>
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
 </resources>
