--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,32 @@
 <resources>
     <string name="app_name">NutriPocket</string>
+
     <string name="nameFirst">First Name</string>
     <string name="nameLast">Last Name</string>
+
     <string name="age">Age</string>
     <string name="genderPrompt">Gender</string>
-    <string name="height">Height (cm)</string>
-    <string name="weight">Weight (kg)</string>
-    <string-array name="gender">
+    <string-array name="genderSpinner">
         <item>Male</item>
         <item>Female</item>
     </string-array>
+
+    <string name="height">Height (cm)</string>
+    <string name="weight">Weight (kg)</string>
+
+    <string name="activityLevel">What is your activity level?</string>
+    <string name="activityPrompt">Test</string>
+    <string-array name="activitySpinner">
+        <item>Light Activity</item>
+        <item>Moderate Activity</item>
+        <item>Heavy Activity</item>
+    </string-array>
+
+    <string name="goal">What is your goal?</string>
+    <string-array name="goalSpinner">
+        <item>Lose Weight</item>
+        <item>Maintain Weight</item>
+        <item>Gain Weight</item>
+    </string-array>
+    <string name="goalPrompt">Test</string>
 </resources>
