--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="weight">Weight (kg)</string>
 
     <string name="activityLevel">What is your activity level?</string>
-    <string name="activityPrompt">Test</string>
     <string-array name="activitySpinner">
+        <item>Sedentary</item>
         <item>Light Activity</item>
         <item>Moderate Activity</item>
         <item>Heavy Activity</item>
@@ -28,5 +28,16 @@
         <item>Maintain Weight</item>
         <item>Gain Weight</item>
     </string-array>
-    <string name="goalPrompt">Test</string>
+
+
+
+
+    <string name="sedentaryTitle">Sedentary: </string>
+    <string name="sedentaryDesc">Little to no exercise.</string>
+    <string name="lightlyTitle">Lightly active:</string>
+    <string name="lightlyDesc">Little exercise or sports 1-3 days per week.</string>
+    <string name="modTitle">Moderately Active:</string>
+    <string name="modDesc">Moderate exercise or sports 3-5 days per week.</string>
+    <string name="heavilyTitle">Very Active:</string>
+    <string name="heavilyDesc">Hard erxice or sports 6-7 days per week.</string>
 </resources>
