--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
     <string name="modDesc">Moderate exercise or sports 3-5 days per week.</string>
     <string name="heavilyTitle">Very Active:</string>
     <string name="heavilyDesc">Hard erxice or sports 6-7 days per week.</string>
+
+
+    <string name="CP1Button">Continue</string>
+    <string name="CP2Button">Submit</string>
 </resources>
