Blank Create Profile/Main Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="modTitle">Moderately Active:</string>
     <string name="modDesc">Moderate exercise or sports 3-5 days per week.</string>
     <string name="heavilyTitle">Very Active:</string>
-    <string name="heavilyDesc">Hard erxice or sports 6-7 days per week.</string>
+    <string name="heavilyDesc">Hard exercise or sports 6-7 days per week.</string>
 
 
     <string name="CP1Button">Continue</string>
