--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,11 +37,11 @@
     <string name="sedentaryTitle">Sedentary: </string>
     <string name="sedentaryDesc">Little to no exercise.</string>
     <string name="lightlyTitle">Lightly active:</string>
-    <string name="lightlyDesc">Little exercise or sports 1-3 days per week.</string>
+    <string name="lightlyDesc">Little exercise or sports 1&#8211;3 days per week.</string>
     <string name="modTitle">Moderately Active:</string>
-    <string name="modDesc">Moderate exercise or sports 3-5 days per week.</string>
+    <string name="modDesc">Moderate exercise or sports 3&#8211;5 days per week.</string>
     <string name="heavilyTitle">Very Active:</string>
-    <string name="heavilyDesc">Hard exercise or sports 6-7 days per week.</string>
+    <string name="heavilyDesc">Hard exercise or sports 6&#8211;7 days per week.</string>
     <string name="extTitle">Extremely Active:</string>
     <string name="extDesc">Hard daily exercise or sports 2 times a day.</string>
 
