--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="nameLast">Last Name</string>
 
     <string name="age">Age</string>
-    <string name="genderPrompt">Gender:</string>
+    <string name="genderPrompt">&#160;Gender:</string>
     <string-array name="genderSpinner">
-        <item>Male</item>
-        <item>Female</item>
+        <item>&#160;&#160;&#160;Male</item>
+        <item>&#160;Female</item>
     </string-array>
 
     <string name="height">Height (cm)</string>
@@ -48,7 +48,7 @@
 
 
     <string name="CP1Button">Continue</string>
-    <string name="CP2Button">Submit</string>
+    <string name="CP2Button">Finish</string>
     <string name="introText">Tell us about yourself!</string>
 
 </resources>
