--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
         <item>Maintain Weight</item>
         <item>&#160;&#160;&#160;&#160;&#160;&#160;Gain Weight</item>
     </string-array>
-    <string name="goalPrompt">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Goal:</string>
+    <string name="goalPrompt">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Goal:</string>
 
 
 
