--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     </string-array>
     <string name="activityLevelPrompt">&#160;&#160;&#160;&#160;&#160;&#160;Activity Level:</string>
 
+    <string name="bodyType">What is your body type?</string>
+
+
     <string name="goal">What is your goal?</string>
     <string-array name="goalSpinner">
         <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lose Weight</item>
