--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,12 @@
     <string name="activityLevelPrompt">&#160;&#160;&#160;&#160;&#160;&#160;Activity Level:</string>
 
     <string name="bodyType">What is your body type?</string>
-
+    <string-array name="bodyTypeSpinner">
+        <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lose Weight</item>
+        <item>Maintain Weight</item>
+        <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;Gain Weight</item>
+    </string-array>
+    <string name="bodyTypePrompt">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Body Type:</string>
 
     <string name="goal">What is your goal?</string>
     <string-array name="goalSpinner">
@@ -34,6 +39,7 @@
         <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;Gain Weight</item>
     </string-array>
     <string name="goalPrompt">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Goal:</string>
+
 
 
 
