--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,11 @@
     <string name="extDesc">Intense formal exercise 6&#8211;7 days per week.</string>
     <string name="noticeDesc">Note: If your job is physically intensive, choose the activity level one step higher than you would normally pick based on formal exercise during the week.</string>
 
+    <string name="ectomorphTitle">Ectomorph: </string>
+    <string name="ectomorphDesc">Thin and lean with long limbs; struggles to gain both body fat and muscle mass.</string>
+    <string name="mesomorphTitle">Mesomorph: </string>
+    <string name="endomorphTitle">Endomorph: </string>
+
 
     <string name="CP1Button">Continue</string>
     <string name="CP2Button">Finish</string>
